# dns-healthcheck

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: action.yml
.github/workflows/: ci.yml  publish.yml
dns_healthcheck/: __init__.py  cli.py  context.py  profiles.py  registry.py  resolver.py  result.py  runner.py
dns_healthcheck/checks/: __init__.py  _helpers.py  address.py  basic.py  connectivity.py  consistency.py  delegation.py  dnssec.py  email.py  nameserver.py  propagation.py  syntax.py  web.py  zone.py
dns_healthcheck/data/: __init__.py  root_hints.py
dns_healthcheck/reporters/: __init__.py  json_reporter.py  junit.py  markdown.py  sarif.py  text.py
scripts/: bump-version.py
tests/: test_cli.py  test_dnssec_discovery.py  test_helpers.py  test_registry.py  test_reporters.py  test_result_model.py  test_spf_parser.py
